SERVER-66272: Disallow new LSM collections and improve error message